@@ -1,6 +1,5 @@
 BUGS
-  *. Elemeno somehow got kicked out of the cult of cthulhu. Erelisa started the gang, made elemeno boss, and now somehow elemeno is no
-     longer a member and erelisa is boss again. Elemeno still has option of using Boss of Cult of Cthulu title. 
+  *.  
 
 TECH
    *. test launch and landing
